<resources>
    <string name="app_name">Система тестирования</string>
    <string name="textView">Производительность работы компьютера (быстрота выполнения операций) зависит от </string>
    <string name="textView1">За единицу измерения количества информации принят</string>
    <string name="textView3">Какое устройство может оказывать вредное воздействие на здоровье человека?</string>
    <string name="textView4">Основным элементом базы данных является </string>
    <string name="textView5">Заражение компьютерными вирусами может произойти в процессе </string>
    <string name="button2">Предыдущий</string>
    <string name="button3">Следующий</string>
    <string name="button4">Предыдущий</string>
    <string name="button5">Следующий</string>
    <string name="radioButton2">2. частоты процессора</string>
    <string name="radioButton3">3. напряжения питания</string>
    <string name="radioButton4">4. быстроты нажатия на клавиши</string>
    <string name="radioButton">1. размера экрана дисплея</string>
    <string name="textView2">Выбор теста</string>
    <string name="button">Выбрать</string>
    <string name="button6">Предыдущий</string>
    <string name="button7">Следующий</string>
    <string name="button8">Предыдущий</string>
    <string name="button9">Следующий</string>
    <string name="button10">Предыдущий</string>
    <string name="button11">Завершить</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rB5">1. Кбайт</string>
    <string name="rB6">2. бит</string>
    <string name="rB7">3. байт</string>
    <string name="rB8">4. Мбайт</string>
    <string name="rB9">1. принтер</string>
    <string name="rB10">2. монитор</string>
    <string name="rB11">3. системный блок</string>
    <string name="rB12">4. модем</string>
    <string name="rB13">1. поле</string>
    <string name="rB14">2. форма</string>
    <string name="rB15">3. таблица</string>
    <string name="rB16">4. запись</string>
    <string name="rB17">1. печати на принтере</string>
    <string name="rB18">2. работы с файлами</string>
    <string name="rB19">3. форматирования дискеты</string>
    <string name="rB20">4. выключения компьютера</string>
</resources>
